--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
 		</title>
 	</head>
 	<body>
-		<p>Hello this is Arith!</p>
+		<h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
+		<form method="POST">
+		  {{x}} {{op}} {{y}} = <input type="number" name="user_answer">
+		  <input type="submit" value="Check your answer">
+		</form>
+
 	</body>
 </html>
