--- a/templates/mark.html
+++ b/templates/mark.html
@@ -5,6 +5,6 @@
 		</title>
 	</head>
 	<body>
-		<h1>Hello {{ uname }}.   Your answer is correct/incorrect!</h1>
+		<h1>Hello {{ uname }}.   Your answer, {{ user_answer }} , is correct/incorrect!</h1>
 	</body>
 </html>
