Added logic for tracking users

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,11 @@
 <html>
-	<head>
-		<title>
-			Arith
-		</title>
-	</head>
-	<body>
-		<h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
-		<form method="POST">
-		  {{x}} {{op}} {{y}} = <input type="number" name="user_answer">
-		  <input type="submit" value="Check your answer">
-		</form>
-
-	</body>
+   <body>
+   
+      <form action = "/ask_q" method = "POST">
+         <p><h2>What's your name</h2></p>
+         <p><input type = "text" name = "uname"/></p>
+         <p><input type = "submit" value = "Login"/></p>
+      </form>
+      
+   </body>
 </html>
