Got routes & users basically sorted

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
    <body>
    
-      <form action = "/ask_q" method = "POST">
+      <form action = "/problems" method = "POST">
          <p><h2>What's your name</h2></p>
          <p><input type = "text" name = "uname"/></p>
          <p><input type = "submit" value = "Login"/></p>
