--- a/templates/problems.html
+++ b/templates/problems.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
-		<form method="POST">
+		<form action="/mark" method="POST">
 		  {{ x }} {{ op }} {{ y }} = <input type="number" name="user_answer">
 		  <input type="submit" value="Check your answer">
 		</form>
