Implement 'Next Problem' button by refactoring ask_qs(), handling GET method & storing userid as session object

--- a/templates/problems.html
+++ b/templates/problems.html
@@ -7,8 +7,8 @@
 	<body>
 		<h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
 		<form action="/mark" method="POST">
-		  {{ x }} {{ op }} {{ y }} = <input type="number" name="user_answer">
-		  <input type="submit" value="Check your answer">
+		  {{ x }} {{ op }} {{ y }} = <input type="number" name="user_answer"/>
+		  <input type="submit" value="Check your answer"/>
 		</form>
 
 	</body>
