--- a/templates/mark.html
+++ b/templates/mark.html
@@ -8,5 +8,9 @@
 		<h1>{{ result }}</h1>
 		<h2>{{ score }}</h2>
 		<h2>{{ percent }}</h2>
+		<form action="/problems" method="GET">
+		    <input type="submit" value="Next problem"/>
+		</form>
+
 	</body>
 </html>
