--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
    
       <form action = "/problems" method = "POST">
          <p><h2>What's your name</h2></p>
-         <p><input type = "text" name = "uname"/></p>
+         <p><input autofocus type = "text" name = "uname"/></p>
          <p><input type = "submit" value = "Login"/></p>
       </form>
       
