--- a/templates/mark.html
+++ b/templates/mark.html
@@ -9,7 +9,7 @@
 		<h2>{{ score }}</h2>
 		<h2>{{ percent }}</h2>
 		<form action="/problems" method="GET">
-		    <input type="submit" value="Next problem"/>
+		    <input autofocus type="submit" value="Next problem"/>
 		</form>
 
 	</body>
