--- a/templates/problems.html
+++ b/templates/problems.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
 		<form action="/mark" method="POST">
-		  {{ x }} {{ op }} {{ y }} = <input type="number" name="user_answer"/>
+		  {{ x }} {{ op }} {{ y }} = <input autofocus type="number" name="user_answer"/>
 		  <input type="submit" value="Check your answer"/>
 		</form>
 
