--- a/templates/mark.html
+++ b/templates/mark.html
@@ -8,6 +8,7 @@
 		<h1>{{ result }}</h1>
 		<h2>{{ score }}</h2>
 		<h2>{{ percent }}</h2>
+		<h2>{{ leader_text }}</h2>
 		<form action="/problems" method="GET">
 		    <input autofocus type="submit" value="Next problem"/>
 		</form>
