Added code for Logout button in mark.html

--- a/templates/mark.html
+++ b/templates/mark.html
@@ -11,7 +11,8 @@
 		<h2>{{ percent }}</h2>
 		<h2>{{ leader_text }}</h2>
 		<form action="/problems" method="GET">
-		    <input autofocus type="submit" value="Next problem"/>
+		    <input autofocus type="submit" name = "submit_button" value="Next problem"/>
+		    <input autofocus type="submit" name = "submit_button" value="Log out"/>
 		</form>
 
 	</body>
