Debug request method on logout button: differentiate <input> element names

--- a/templates/mark.html
+++ b/templates/mark.html
@@ -12,7 +12,7 @@
 		<h2>{{ leader_text }}</h2>
 		<form action="/problems" method="GET">
 		    <input autofocus type="submit" name = "submit_button" value="Next problem"/>
-		    <input autofocus type="submit" name = "submit_button" value="Log out"/>
+		    <input autofocus type="submit" name = "logout_button" value="Log out"/>
 		</form>
 
 	</body>
