--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     {% block head %}
-    <link rel="stylesheet" href="../css/style.css">
+    <meta charset="utf-8">
+    <meta name="description" content="Mental Arithmetic Game">
+    <meta name="author" content="John Lynch">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
   <body>
-    <div id="content">{% block content %}{% endblock %}</div>
+    <section id="content">{% block content %}{% endblock %}</section>
     
   </body>
 </html>
