Created static/ directory and moved css/ inside it

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Mental Arithmetic Game">
     <meta name="author" content="John Lynch">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
