--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,6 @@
    <form action = "/problems" method = "POST">
          <p><h2>What's your name</h2></p>
          <p><input autofocus type = "text" name = "uname"/></p>
-         <p><input type = "submit" value = "Login"/></p>
+         <p><input class="btn" type = "submit" value = "Login"/></p>
       </form>
 {% endblock %}
