--- a/templates/mark.html
+++ b/templates/mark.html
@@ -15,8 +15,8 @@
    <h2>{{ percent }}</h2>
    <h2>{{ leader_text }}</h2>
    <form action="/problems" method="GET">
-       <input autofocus type="submit" name = "submit_button" value="Next problem"/>
-       <input type="submit" name = "logout_button" value="Log out"/>
+       <input class="btn" autofocus type="submit" name = "submit_button" value="Next problem"/>
+       <input class="btn" type="submit" name = "logout_button" value="Log out"/>
    </form>
    <table border = 5>
        {% for user in user_list %}
