--- a/templates/problems.html
+++ b/templates/problems.html
@@ -12,6 +12,6 @@
    <h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
 		<form action="/mark" method="POST">
 		  {{ x }} {{ op }} {{ y }} = <input autofocus type="number" name="user_answer"/>
-		  <input type="submit" value="Check your answer"/>
+		  <input class="btn" type="submit" value="Check your answer"/>
 		</form>
 {% endblock %}
