--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,27 +1,52 @@
 * {
-        box-sizing: border-box;
-        border-radius: 0.5vw;
-        text-decoration: none;
-        --light-text-col: #fff6e5;
+    box-sizing: border-box;
+    border-radius: 0.5vw;
+    text-decoration: none;
+    --light-text-col: #fff6e5;
+    --bkg-col: #440025;
+    --btn-col: #090f32;
 }
 
 body, html {
     margin: 0;
     padding: 0;
-    color: #fdc;
-    background-color: #11d;
+    background-color: black;
     font-family: sans-serif;
 }
 
 #content {            
-    background-color: #8b0036;
-    color: #ffeae7;
-    padding: 1em;
+    background-color: var(--bkg-col);
+    color: var(--light-text-col);
+    padding: 1vh 1vw;
 }
+
+.main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 2vmax;
+}
+
+.feedback {
+    
+}
+
+.scoreboard {
+
+}
+
+
+
+
+
+
+
+
+
 
 .btn {
     font-size: 1vw;
-    background-color: black;
+    background-color: var(--btn-col);
     color: var(--light-text-col);
     width: 10vw;
     height: auto;
@@ -38,7 +63,7 @@ body, html {
 
 .btn:hover {
     transform: scale(1.04);
-    filter: invert(100%);   /* switch black and white text */
+    filter: invert(100%);   /* switch black & white text */
     border: 2px solid white;  
 }
 
