--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-	{{ 'What's your name?' }}'
+	{{ "What's your name?" }}
 {% endblock %}
 
 {% block head %}
