--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,8 +22,8 @@ body, html {
 
 .main {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    /*grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;*/
     grid-gap: 2vmax;
 }
 
@@ -39,7 +39,7 @@ body, html {
 }
 
 .sum {
-    font-size: 1vw;
+    font-size: 3vw;
     background-color: var(--btn-col);
     color: var(--light-text-col);
     padding: 1vh 1vw;
