--- a/templates/problems.html
+++ b/templates/problems.html
@@ -12,7 +12,7 @@
    <h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
 		<form action="/mark" method="POST">
 		  <section class="sum">
-		  	{{ x }} {{ op }} {{ y }} = <input autofocus type="number" name="user_answer"/>
+		  	{{ x }} {{ op }} {{ y }} = <input class="answer" autofocus type="number" name="user_answer"/>
 		  
 		  </section>
 		  <input class="btn" type="submit" value="Check your answer"/>
