--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ body, html {
 
 .main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50vw, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(50vw, 1fr));
     grid-auto-rows: 1fr;
     grid-gap: 2vmax;
 }
