--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,9 +23,10 @@ body, html {
 
 .main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50vw, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(768px 1fr));
     grid-auto-rows: 1fr;
     grid-gap: 2vmax;
+    border: 5px inset var(--h1-col);
 }
 
 .feedback {
