--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
     --bkg-col: #1a000e;
     --btn-col: #000314;
     --h1-col: #5dbfff;
+    --pale-bkg-col: #98c4ff;
 }
 
 body, html {
@@ -15,21 +16,22 @@ body, html {
     font-family: sans-serif;
 }
 
-#content {            
-    background-color: var(--bkg-col);
+#content {   
+    background-color: var(--pale-bkg-col)         
     color: var(--light-text-col);
     padding: 1vh 1vw;
 }
 
 .main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(768px 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px 1fr));
     grid-auto-rows: 1fr;
     grid-gap: 2vmax;
     border: 5px inset var(--h1-col);
 }
 
 .feedback {
+    background-color: var(--bkg-col);
     
 }
 
