--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    background-color: --pale-bkg-col;
+    background-color: var(--pale-bkg-col);
     font-family: sans-serif;
 }
 
