--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,14 +28,14 @@ body, html {
     grid-template-columns: repeat(auto-fit, minmax(400px 1fr));
     grid-auto-rows: 1fr;
     grid-gap: 2vmax;
-    border: 5px inset var(--bright-border-col);
 }
 
 .feedback, .scoreboard {
     font-size: 2.0vw;
     background-color: var(--btn-col);
     color: var(--light-text-col);
-    padding: 1vh 1vw;
+    padding: 2vh 2vw;
+    border: 5px ridge var(--bright-border-col);
 }
 
 .scoreboard * {
