tweaked styling for problem page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,8 +49,13 @@ body, html {
     padding: 1vh 1vw;
 }
 
+.problem {
+    display: inline-block;
+    text-align: center;
+}
+
 h1 {
-    font-size: 2vmax;
+    font-size: 2.8vmax;
 }
 
 
