--- a/templates/problems.html
+++ b/templates/problems.html
@@ -10,7 +10,7 @@
 
 {% block content %}
    <h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
-		<form action="/mark" method="POST">
+		<form class="problem" action="/mark" method="POST">
 		  <section class="sum">
 		  	{{ x }} {{ op }} {{ y }} = <input class="answer" autofocus type="number" name="user_answer"/>
 		  
