tweaked styling and reformatted HTML

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,9 +23,9 @@ body, html {
     padding: 1vh 1vw;
 }
 
-.main {
+.grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-auto-rows: 1fr;
     grid-gap: 2vmax;
 }
