--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,17 +1,27 @@
 <!doctype html>
 <html>
+
   <head>
     {% block head %}
-    <meta charset="utf-8">
-    <meta name="description" content="Mental Arithmetic Game">
-    <meta name="author" content="John Lynch">
+      <meta charset="utf-8">
+      <meta name="description" content="Mental Arithmetic Game">
+      <meta name="author" content="John Lynch">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>{% block title %}{% endblock %}</title>
+      <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+      <title>
+        {% block title %}
+        {% endblock %}
+      </title>
     {% endblock %}
   </head>
+
   <body>
-    <section id="content">{% block content %}{% endblock %}</section>
-    
+
+    <main class="main">
+      {% block content %}
+      {% endblock %}
+    </main> 
+
   </body>
+
 </html>
