--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ body, html {
 .sum, .answer, .name {
     font-size: 3vw;
     background-color: var(--btn-col);
-    color: var(--light-text-col);
+    color: var(--bright-border-col);
     padding: 1vh 1vw;
 }
 
@@ -67,7 +67,7 @@ tr:first-child {
 .btn {
     font-size: 1.4vw;
     background-color: var(--btn-col);
-    color: var(--light-text-col);
+    color: var(--bright-border-col);
     width: 20vw;
     height: auto;
     padding: 3px 3px;
