--- a/templates/problems.html
+++ b/templates/problems.html
@@ -9,15 +9,16 @@
 {% endblock %}
 
 {% block content %}
-
-    <h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
-	<form class="problem" action="/mark" method="POST">
-		<section class="sum">
-		 	
-		 	{{ x }} {{ op }} {{ y }} = <input class="answer" autofocus type="number" name="user_answer"/>
-		  
-		</section>
-	    <input class="btn" type="submit" value="Check your answer"/>
-	</form>
+    <section class="problems">
+	    <h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
+		<form class="problem" action="/mark" method="POST">
+			<section class="sum">
+			 	
+			 	{{ x }} {{ op }} {{ y }} = <input class="answer" autofocus type="number" name="user_answer"/>
+			  
+			</section>
+		    <input class="btn" type="submit" value="Check your answer"/>
+		</form>
+	</section>
 
 {% endblock %}
