--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
       <meta charset="utf-8">
       <meta name="description" content="Mental Arithmetic Game">
       <meta name="author" content="John Lynch">
-
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
       <title>
         {% block title %}
