Moved footer to bottom

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,6 +91,10 @@ tr:first-child {
     border: 2px solid var(--btn-col);  
 }
 
+.footer {
+    bottom: 0;
+}
+
 /*
 Font Awesome styling for social icons:
 */
