Added border to problem form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,7 @@ body, html {
 .problem {
     display: inline-block;
     text-align: center;
+    border: 5px ridge var(--bright-border-col);
 }
 
 h1 {
