--- a/templates/mark.html
+++ b/templates/mark.html
@@ -17,8 +17,8 @@
        <h2>{{ percent }}</h2>
        <h2>{{ leader_text }}</h2>
        <form action="/problems" method="GET">
-         <input class="btn" autofocus type="submit" name = "submit_button" value="Next problem"/>
-         <input class="btn" type="submit" name = "logout_button" value="Log out"/>
+         <input class="btn" id="btn-next" autofocus type="submit" name = "submit_button" value="Next problem"/>
+         <input class="btn" id="btn-logout" type="submit" name = "logout_button" value="Log out"/>
        </form>     
     </section>
 
