--- a/templates/mark.html
+++ b/templates/mark.html
@@ -11,7 +11,7 @@
 {% block content %}
    
     <section class="feedback">
-       <h1>{{ result }}</h1>
+       <h1 id="result">{{ result }}</h1>
        <h1>{{ feedback }}</h1>
        <h2>{{ score }}</h2>
        <h2>{{ percent }}</h2>
