--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,6 +96,13 @@ tr:first-child {
     color: var(--bright-border-col);
 }
 
+#btn-holder {
+    display: grid;
+    grid-gap: 2vw;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
 .btn {
     font-size: 1.4vw;
     background-color: var(--btn-col);
