--- a/templates/mark.html
+++ b/templates/mark.html
@@ -16,7 +16,7 @@
        <h2>{{ score }}</h2>
        <h2>{{ percent }}</h2>
        <h2>{{ leader_text }}</h2>
-       <form action="/problems" method="GET">
+       <form class="btn-holder" action="/problems" method="GET">
          <input class="btn" id="btn-logout" type="submit" name = "logout_button" value="Log out"/>
          <input class="btn" id="btn-next" autofocus type="submit" name = "submit_button" value="Next problem"/>
        </form>     
