--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,8 +38,8 @@ body, html {
 }
 
 .feedback, .scoreboard {
-    align-self: start;
-    font-size: 2.0vw;
+    /*align-self: start;
+    */font-size: 2.0vw;
     background-color: var(--btn-col);
     color: var(--light-text-col);
     padding: 2vh 2vw;
