--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,8 +38,7 @@ body, html {
 }
 
 .feedback, .scoreboard {
-    /*align-self: start;
-    */font-size: 2.0vw;
+    font-size: 2.0vw;
     background-color: var(--btn-col);
     color: var(--light-text-col);
     padding: 2vh 2vw;
@@ -133,4 +132,10 @@ tr:first-child {
 
 #btn-logout {
     color: var(--stop-col);
+}
+
+@media screen and (max-width: 767px) and (orientation:portrait) {
+    .feedback, .scoreboard {
+        font-size: 3vw;
+    }
 }
