--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,11 +102,11 @@ tr:first-child {
 }
 
 .btn {
-    font-size: 1.4vw;
+    font-size: 2.4vw;
     background-color: var(--btn-col);
     color: var(--bright-border-col);
     width: 20vw;
-    height: auto;
+    height: 10vw;
     padding: 3px 3px;
     text-align: center;
     font-weight: bold;
