--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 {% endblock %}
 
 {% block content %}
-   <form action = "/problems" method = "POST">
-     <p><h2>What's your name?</h2></p>
+   <form class="login-form" action = "/problems" method = "POST">
+     <p><h1>What's your name?</h1></p>
      <p><input class="name" autofocus type = "text" name = "uname"/></p>
      <p><input class="btn" type = "submit" value = "Login"/></p>
    </form>
