--- a/templates/problems.html
+++ b/templates/problems.html
@@ -10,14 +10,14 @@
 
 {% block content %}
     <section class="problems">
-	    <h1>Hello {{ uname }}, this is Arith!   Test your arithmetic!</h1>
+	    <h1>Hello {{ uname }}, this is Arith!   Test your mental arithmetic!</h1>
 		<form class="problem" action="/mark" method="POST">
 			<section class="sum">
 			 	
 			 	{{ x }} {{ op }} {{ y }} = <input class="answer" autofocus type="number" name="user_answer"/>
 			  
 			</section>
-		    <input class="btn" type="submit" value="Check your answer"/>
+		    <input class="btn" type="submit" value="Check"/>
 		</form>
 	</section>
 
