--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,7 +129,7 @@ tr:first-child {
     border-radius: 5px;
 }
 
-.btn:hover {
+.btn:hover, .btn:focus {
     transform: scale(1.01);
     filter: invert(100%);   /* switch black & white text */
     border: 2px solid var(--btn-col);  
