--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     border-radius: 0.5vw;
     text-decoration: none;
     --light-text-col: #ffddbb;
@@ -21,20 +22,26 @@ body, html {
 }
 
 #content {   
-    background-color: var(--bkg-col)         
+    background-color: var(--bkg-col);         
     color: var(--light-text-col);
     padding: 1vh 1vw;
 }
 
 .main {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    -ms-grid-rows: 1fr 2vmax 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 2vmax;
     justify-items: center;
-    align-items: center;
-    justify-content: space-around;
-    align-content: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-line-pack: start;
+        align-content: start;
 }
 
 .feedback, .scoreboard {
@@ -71,9 +78,22 @@ body, html {
 }
 
 .problems {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+}
+
+.problems > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+}
+
+.problems > *:nth-child(2) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
 }
 
 .problems > h1 {
@@ -105,11 +125,26 @@ tr:first-child {
 }
 
 .btn-holder {
+    display: -ms-grid;
     display: grid;
     grid-gap: 2vw;
+    -ms-grid-columns: 1fr 2vw 1fr;
     grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr;
     grid-template-rows: 1fr;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+.btn-holder > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+}
+
+.btn-holder > *:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
 }
 
 .btn {
@@ -121,21 +156,31 @@ tr:first-child {
     padding: 3px 3px;
     text-align: center;
     font-weight: bold;
-    box-shadow: 0 0 1px 1px;
+    -webkit-box-shadow: 0 0 1px 1px;
+            box-shadow: 0 0 1px 1px;
     cursor: pointer;
     margin: 1px 1px 1px 1px;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    -o-transition: transform 0.5s;
     transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
     border: 4px groove var(--light-text-col);
     border-radius: 5px;
 }
 
 .btn:hover {
-    transform: scale(1.01);
-    filter: invert(100%);   /* switch black & white text */
+    -webkit-transform: scale(1.01);
+        -ms-transform: scale(1.01);
+            transform: scale(1.01);
+    -webkit-filter: invert(100%);
+            filter: invert(100%);   /* switch black & white text */
     border: 2px solid var(--btn-col);  
 }
 .btn:focus {
-    transform: scale(1.01);
+    -webkit-transform: scale(1.01);
+        -ms-transform: scale(1.01);
+            transform: scale(1.01);
 }
 
 #btn-next {
@@ -150,11 +195,14 @@ tr:first-child {
 
     .feedback, .scoreboard, .scoreboard * {
         font-size: 3vw;
-        align-self: start;
+        -ms-flex-item-align: start;
+            -ms-grid-row-align: start;
+            align-self: start;
     }
 
     .login-form {
-        justify-self: stretch;
+        -ms-grid-column-align: stretch;
+            justify-self: stretch;
     }
 
     .btn, .name {
