Changed <h1> to <header> to make more semantic html

--- a/templates/problems.html
+++ b/templates/problems.html
@@ -10,7 +10,9 @@
 
 {% block content %}
     <section class="problems">
-	    <h1>Hello {{ uname }}, this is Arith!   Test your mental arithmetic!</h1>
+	    <header>
+	    	Hello {{ uname }}, this is Arith!   Test your mental arithmetic!
+	    </header>
 		<form class="problem" action="/mark" method="POST">
 			<section class="sum">
 			 	
