--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,14 @@
 
 {% block content %}
    <form class="login-form" action = "/problems" method = "POST">
-     <p><h1>What's your name?</h1></p>
-     <p><input class="name" autofocus type = "text" name = "uname"/></p>
-     <p><input class="btn" type = "submit" value = "Login"/></p>
+     <header>
+     	What's your name?
+     </header>
+     <p>
+     	<input class="name" autofocus type = "text" name = "uname"/>
+ 	 </p>
+     <p>
+     	<input class="btn btn-login" type = "submit" value = "Login"/>
+ 	 </p>
    </form>
 {% endblock %} 
